--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
    <div>Hello Everyone</div> 
-=======
-   <div>Hello Nobady</div> 
->>>>>>> d4ba876b85a5af1a316ce7447e31f431261a4194
+   <div>Goodbye people</div> 
 </body>
 </html>
